2007-02-01  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use gmodule-export, as we export symbols.

	* matchbox-panel/Makefile.am:
	Add --export-dynamic as a Poky bug means gmodule-export doesn't
	have it.

2007-01-31  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	* applets/showdesktop/mb-applet-showdesktop.png:
	* applets/showdesktop/Makefile.am:
	Ship the icon, as Poky currently doesn't have an icon theme.

2007-01-24  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Disable static libraries, they are useless here.

	* applets/*/Makefile.am:
	Disable library versioning.

2007-01-24  Ross Burton  <ross@openedhand.com>

	* matchbox-panel.pc.in:
	Add a variable for the applet library directory.

2007-01-23  Matthew Allum  <mallum@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	Use a 'simpler' named icon and dont draw a frame around it.	

	* matchbox-panel/mb-panel.c: 
	Be a bit more informative when an applet cant be loaded.
	(via mickeyl)

2006-12-22  Matthew Allum  <mallum@openedhand.com>

	* matchbox-panel/mb-panel.c: 
	Add support for being parented in titlebar.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (sync_icon):

	Use "panel-window-menu" icon when there is no active app window.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (sync_icon),
	(rebuild_menu):

	Use default icon if no icon is specified.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/windowselector/windowselector.c: (window_get_icon),
	(rebuild_menu), (button_press_event_cb), (filter_func),
	(screen_changed_cb):

	Show active task icon.

2006-08-24  Jorn Baayen  <jorn@openedhand.com>

	* applets/showdesktop/showdesktop.c: (sync):

	Add nitems check.

	* applets/windowselector/windowselector.c: (get_utf8_property),
	(get_text_property), (window_get_icon),
	(window_menu_item_activate_cb), (rebuild_menu), (menu_hide_cb),