@@ -1,3 +1,9 @@
+2007-02-01  Matthew Allum  <mallum@openedhand.com>
+
+	* applets/clock/clock.c: 
+	Set clock text color to match icons
+	Update battery and showdesktop icons
+
 2007-02-01  Ross Burton  <ross@openedhand.com>
 
 	* configure.ac:
